# dtop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dtop-report-20260218-195825.md
contrib/: dtop.service
src/: alerts.rs  app.rs  config.rs  input.rs  main.rs
src/collectors/: diskstats.rs  filesystem.rs  lsblk.rs  lvm.rs  mdraid.rs  mod.rs  nfs.rs  pressure.rs  process_io.rs  smart.rs  smart_cache.rs  zfs.rs
src/models/: device.rs  filesystem.rs  mod.rs  process.rs  smart.rs  volume.rs
src/ui/: alert_log_view.rs  alerts_panel.rs  benchmark_popup.rs  config_overlay.rs  dashboard.rs  detail.rs  device_list.rs  filesystem_bars.rs  filesystem_view.rs  footer.rs  help.rs  mod.rs  nfs_view.rs  process_view.rs  smart_panel.rs  theme.rs  throughput.rs  volume_view.rs
src/util/: ack_store.rs  alert_log.rs  health_history.rs  health_score.rs  human.rs  mod.rs  notify.rs  report.rs  ring_buffer.rs  smart_anomaly.rs  smart_attr_desc.rs  smart_baseline.rs  user_state.rs  webhook.rs  write_endurance.rs
