[package]
name = "dtop"
version = "0.1.0"
edition = "2021"
description = "A btop-style disk monitor for Linux sysadmins"

[dependencies]
ratatui      = "0.29"
crossterm    = "0.28"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
nix          = { version = "0.29", features = ["fs"] }
clap         = { version = "4",  features = ["derive"] }
anyhow       = "1"
chrono       = "0.4"
toml         = "0.8"
dirs         = "5"

[profile.release]
opt-level = 3
strip     = true
lto       = true
